# QriaPlayer

./: .gitignore  1.json  QriaPlayer.pyw  README.md  apis.toml  autoremove.py  clean_logs.py  config.toml  download.py  download_kuwo.py  downloader.py  gui.py  paio.py  paio.pyw  paio_download.py  player.py  player_state.json  pyproject.toml  requirements.txt  run.bat  sass_compile.bat  server.py  update_lrc.py  vsc.bat  webui.py  webui.pyw
src/: downloader.py  server.py
static/: download.html  index.html  index.html.backup  index.html.new  main.css  main.js  scrollToPlaying.css  style.css  volumeSlider.css
static/css/: README.md  download.css  main.css  main.css.map  main.sass  mobile.css  modal.css  scrollTo.css  scrollToPlaying.css  style.css  video.css  volumeSlider.css  welcome.css
static/js/: LyricsManager.js  Player.js  README.md  UIController.js  app.js  download.js  main.js
static/scss/: main.css  main.css.map  main.sass
