[project]
name = "QriaPlayer"
version = "1.0.1"
description = "QriaPlayer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bilibili-api-python>=17.2.1",
    "httpx>=0.28.1",
    "orjson>=3.10.18",
    "pyffmpeg>=2.4.3",
    "pywebview>=5.4",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
