[project]
name = "QriaPlayer"
version = "2.1.0"
description = "QriaPlayer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bilibili-api-python>=17.3.0",
    "httpx>=0.28.1",
    "pystray>=0.19.5",
    "pywebview>=5.4",
    "waitress>=3.0.2",
]

[project.optional-dependencies]
merge = [
    "pyffmpeg>=2.4.3; platform_system=='Windows'",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
